# fedtools2

./: .gitattributes  .gitignore  .pre-commit-config.yaml  pyproject.toml  structure.md  test_env.example.py
fedtools2/: etl.py
fedtools2/config/: default.yaml
src/fedtools2/config/: default.yaml
src/fedtools2/utils/: io.py
